Source/Alternet.UI.Pal/Api/Control.Api.h

ALTERNET_UI_API c_bool Control_GetWantChars_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetWantChars();
    });
}
ALTERNET_UI_API void Control_SetWantChars_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetWantChars(value);
    });
}
ALTERNET_UI_API c_bool Control_GetBindScrollEvents_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetBindScrollEvents();
    });
}
ALTERNET_UI_API void Control_SetBindScrollEvents_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetBindScrollEvents(value);
    });
}
ALTERNET_UI_API c_bool Control_GetProcessIdle_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetProcessIdle();
    });
}
ALTERNET_UI_API void Control_SetProcessIdle_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetProcessIdle(value);
    });
}
ALTERNET_UI_API c_bool Control_GetProcessUIUpdates_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetProcessUIUpdates();
    });
}
ALTERNET_UI_API void Control_SetProcessUIUpdates_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetProcessUIUpdates(value);
    });
}
ALTERNET_UI_API c_bool Control_GetIsBold_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsBold();
    });
}
ALTERNET_UI_API void Control_SetIsBold_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetIsBold(value);
    });
}
ALTERNET_UI_API c_bool Control_GetAcceptsFocus_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetAcceptsFocus();
    });
}
ALTERNET_UI_API void Control_SetAcceptsFocus_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetAcceptsFocus(value);
    });
}
ALTERNET_UI_API c_bool Control_GetAcceptsFocusFromKeyboard_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetAcceptsFocusFromKeyboard();
    });
}
ALTERNET_UI_API void Control_SetAcceptsFocusFromKeyboard_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetAcceptsFocusFromKeyboard(value);
    });
}
ALTERNET_UI_API c_bool Control_GetAcceptsFocusRecursively_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetAcceptsFocusRecursively();
    });
}
ALTERNET_UI_API void Control_SetAcceptsFocusRecursively_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetAcceptsFocusRecursively(value);
    });
}
ALTERNET_UI_API c_bool Control_GetAcceptsFocusAll_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetAcceptsFocusAll();
    });
}
ALTERNET_UI_API void Control_SetAcceptsFocusAll_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetAcceptsFocusAll(value);
    });
}
ALTERNET_UI_API int Control_GetBorderStyle_(Control* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetBorderStyle();
    });
}
ALTERNET_UI_API void Control_SetBorderStyle_(Control* obj, int value)
{
    MarshalExceptions<void>([&](){
        obj->SetBorderStyle(value);
    });
}
ALTERNET_UI_API int Control_GetLayoutDirection_(Control* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetLayoutDirection();
    });
}
ALTERNET_UI_API void Control_SetLayoutDirection_(Control* obj, int value)
{
    MarshalExceptions<void>([&](){
        obj->SetLayoutDirection(value);
    });
}
ALTERNET_UI_API char16_t* Control_GetName_(Control* obj)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetName());
    });
}
ALTERNET_UI_API void Control_SetName_(Control* obj, const char16_t* value)
{
    MarshalExceptions<void>([&](){
        obj->SetName(value);
    });
}
ALTERNET_UI_API int Control_GetId_(Control* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetId();
    });
}
ALTERNET_UI_API void Control_SetId_(Control* obj, int value)
{
    MarshalExceptions<void>([&](){
        obj->SetId(value);
    });
}
ALTERNET_UI_API SizeI_C Control_GetEventOldDpi_(Control* obj)
{
    return MarshalExceptions<SizeI_C>([&](){
        return obj->GetEventOldDpi();
    });
}
ALTERNET_UI_API SizeI_C Control_GetEventNewDpi_(Control* obj)
{
    return MarshalExceptions<SizeI_C>([&](){
        return obj->GetEventNewDpi();
    });
}
ALTERNET_UI_API Control* Control_GetEventFocusedControl_(Control* obj)
{
    return MarshalExceptions<Control*>([&](){
        return obj->GetEventFocusedControl();
    });
}
ALTERNET_UI_API char16_t* Control_GetText_(Control* obj)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetText());
    });
}
ALTERNET_UI_API void Control_SetText_(Control* obj, const char16_t* value)
{
    MarshalExceptions<void>([&](){
        obj->SetText(value);
    });
}
ALTERNET_UI_API c_bool Control_GetIsActive_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsActive();
    });
}
ALTERNET_UI_API void Control_SetEventCallback_(Control::ControlEventCallbackType callback)
{
    Control::SetEventCallback(callback);
}