Source/Alternet.UI/Native/Control.Generated.cs

            
            switch (e)
            {
                case NativeApi.ControlEvent.Idle:
                {
                    OnPlatformEventIdle(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.Paint:
                {
                    OnPlatformEventPaint(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.MouseClick:
                {
                    OnPlatformEventMouseClick(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.VisibleChanged:
                {
                    OnPlatformEventVisibleChanged(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.MouseCaptureLost:
                {
                    OnPlatformEventMouseCaptureLost(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.DpiChanged:
                {
                    OnPlatformEventDpiChanged(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.RequestCursor:
                {
                    OnPlatformEventRequestCursor(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.Destroyed:
                {
                    OnPlatformEventDestroyed(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.TextChanged:
                {
                    OnPlatformEventTextChanged(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.GotFocus:
                {
                    OnPlatformEventGotFocus(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.LostFocus:
                {
                    OnPlatformEventLostFocus(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.DragLeave:
                {
                    OnPlatformEventDragLeave(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.DragDrop:
                {
                    var ea = new NativeEventArgs<DragEventData>(MarshalEx.PtrToStructure<DragEventData>(parameter));
                    OnPlatformEventDragDrop(ea); return ea.Result;
                }
                case NativeApi.ControlEvent.DragOver:
                {
                    var ea = new NativeEventArgs<DragEventData>(MarshalEx.PtrToStructure<DragEventData>(parameter));
                    OnPlatformEventDragOver(ea); return ea.Result;
                }
                case NativeApi.ControlEvent.DragEnter:
                {
                    var ea = new NativeEventArgs<DragEventData>(MarshalEx.PtrToStructure<DragEventData>(parameter));
                    OnPlatformEventDragEnter(ea); return ea.Result;
                }
                case NativeApi.ControlEvent.VerticalScrollBarValueChanged:
                {
                    OnPlatformEventVerticalScrollBarValueChanged(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.HorizontalScrollBarValueChanged:
                {
                    OnPlatformEventHorizontalScrollBarValueChanged(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.SizeChanged:
                {
                    OnPlatformEventSizeChanged(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.LocationChanged:
                {
                    OnPlatformEventLocationChanged(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.Activated:
                {
                    OnPlatformEventActivated(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.Deactivated:
                {
                    OnPlatformEventDeactivated(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.HandleCreated:
                {
                    OnPlatformEventHandleCreated(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.BeforeHandleDestroyed:
                {
                    OnPlatformEventBeforeHandleDestroyed(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.HandleDestroyed:
                {
                    OnPlatformEventHandleDestroyed(); return IntPtr.Zero;
                }
                case NativeApi.ControlEvent.SystemColorsChanged:
                {
                    OnPlatformEventSystemColorsChanged(); return IntPtr.Zero;
                }
                default: throw new Exception("Unexpected ControlEvent value: " + e);
            }
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate IntPtr ControlEventCallbackType(IntPtr obj, ControlEvent e, IntPtr param);
            
            public enum ControlEvent
            {
                Idle,
                Paint,
                MouseClick,
                VisibleChanged,
                MouseCaptureLost,
                DpiChanged,
                RequestCursor,
                Destroyed,
                TextChanged,
                GotFocus,
                LostFocus,
                DragLeave,
                DragDrop,
                DragOver,
                DragEnter,
                VerticalScrollBarValueChanged,
                HorizontalScrollBarValueChanged,
                SizeChanged,
                LocationChanged,
                Activated,
                Deactivated,
                HandleCreated,
                BeforeHandleDestroyed,
                HandleDestroyed,
                SystemColorsChanged,
            }
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetEventCallback_(ControlEventCallbackType callback);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Control_GetWantChars_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetWantChars_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Control_GetBindScrollEvents_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetBindScrollEvents_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Control_GetProcessIdle_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetProcessIdle_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Control_GetProcessUIUpdates_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetProcessUIUpdates_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Control_GetIsBold_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetIsBold_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Control_GetAcceptsFocus_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetAcceptsFocus_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Control_GetAcceptsFocusFromKeyboard_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetAcceptsFocusFromKeyboard_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Control_GetAcceptsFocusRecursively_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetAcceptsFocusRecursively_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Control_GetAcceptsFocusAll_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetAcceptsFocusAll_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int Control_GetBorderStyle_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetBorderStyle_(IntPtr obj, int value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int Control_GetLayoutDirection_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetLayoutDirection_(IntPtr obj, int value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string Control_GetName_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetName_(IntPtr obj, string value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int Control_GetId_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetId_(IntPtr obj, int value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.SizeI Control_GetEventOldDpi_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.SizeI Control_GetEventNewDpi_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr Control_GetEventFocusedControl_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string Control_GetText_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Control_SetText_(IntPtr obj, string value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Control_GetIsActive_(IntPtr obj);
